<resources>
    <string name="app_name">AndroidPortfolio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navAbout">Обо мне</string>
    <string name="navEducation">Образование и навыки</string>
    <string name="navPortfolio">Портфолио</string>
    <string name="navContactsAndFeedback">Контакты</string>
    <string name="navContacts">Контактная информация</string>
    <string name="navFeedback">Обратная связь</string>
    <string name="navMain">В начало</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
