<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMain"
            android:checked="true"
            android:icon="@drawable/ic_account"
            android:title="@string/navMain" />
        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_information"
            android:title="@string/navAbout" />
        <item
            android:id="@+id/navEducation"
            android:icon="@drawable/ic_school"
            android:title="@string/navEducation" />
        <item
            android:id="@+id/navPortfolio"
            android:icon="@drawable/ic_code_tags"
            android:title="@string/navPortfolio" />
        <item
            android:id="@+id/navContacts"
            android:icon="@drawable/ic_contact_mail"
            android:title="@string/navContacts" />
        <item
            android:id="@+id/navFeedback"
            android:icon="@drawable/ic_email"
            android:title="@string/navFeedback" />
    </group>
</menu>
